# scratcher

./: .gitignore  check.py  cian_data.parquet.dvc  cian_results.json  parcing.py  pyproject.toml  test-model.py  validate_dataset.py
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
