[project]
name = "scratcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.93",
    "dvc>=3.67.1",
    "playwright>=1.58.0",
    "pyautogui>=0.9.54",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

