[project]
name = "scratcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.93",
    "catboost>=1.2.10",
    "dvc>=3.67.1",
    "geopy>=2.4.1",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
    "playwright>=1.58.0",
    "pyarrow>=24.0.0",
    "pyautogui>=0.9.54",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

